--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
     "tailwindcss": "^3.4.16",
     "vite": "^6.0.3"
   },
-  "homepage": "https://jbaileystudio.github.io/Sumpoints/"
+  "homepage": "https://sumpoints.com"
 }
