--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]  # or 'master' if that's your default branch
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
@@ -27,4 +27,4 @@ jobs:
         with:
           branch: gh-pages
           folder: dist
-
+          clean: true
